import {
  Column,
  CreateDateColumn,
  Entity,
  Index,
  PrimaryGeneratedColumn,
  UpdateDateColumn,
} from 'typeorm';

export enum UserRole {
  USER = 'USER',
  TECHNICIAN = 'TECHNICIAN',
  ADMIN = 'ADMIN',
}

@Entity('users')
export class User {
  @PrimaryGeneratedColumn('uuid')
  id: string;

  @Index({ unique: true })
  @Column({ type: 'varchar', length: 255 })
  email: string;

  // select: false exclut cette colonne de toutes les requêtes par défaut.
  // Il faut la demander explicitement pour l'obtenir, ce qui empêche le
  // hachage de fuiter même si une entité entière est renvoyée telle quelle.
  @Column({
    name: 'password_hash',
    type: 'varchar',
    length: 255,
    select: false,
  })
  passwordHash: string;

  @Column({ type: 'varchar', length: 120 })
  name: string;

  @Column({
    type: 'enum',
    enum: UserRole,
    enumName: 'user_role',
    default: UserRole.USER,
  })
  role: UserRole;

  // Un compte désactivé ne peut plus se connecter, et ses requêtes en cours
  // sont refusées dès la vérification suivante. La valeur par défaut vaut
  // aussi pour les lignes existantes au moment où la colonne est ajoutée.
  @Column({ name: 'is_active', type: 'boolean', default: true })
  isActive: boolean;

  // timestamptz conserve le fuseau horaire : les calculs de durée restent
  // justes, ce dont dépend directement le temps moyen de résolution (US15).
  @CreateDateColumn({ name: 'created_at', type: 'timestamptz' })
  createdAt: Date;

  @UpdateDateColumn({ name: 'updated_at', type: 'timestamptz' })
  updatedAt: Date;
}
